2007-09-13  Sven Neumann  <sven@gimp.org>

	* app/gui/Makefile.am
	* app/gui/gui-vtable.c (gui_recent_list_add_uri): use GIMP_COMMAND
	instead of hardcoding "gimp" as the command line used to launch
	this resource. Use the translated full application name.

2007-09-13  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpcolorprofilestore-private.h
	* libgimpwidgets/gimpcolorprofilestore.c
	* libgimpwidgets/gimpcolorprofilecombobox.c: only keep the eight
	most recently used profiles in the history.

2007-09-13  Nils Philippsen  <nphilipp@redhat.com>

	* app/file/file-save.[ch] (file_save)
	* app/dialogs/file-save-dialog.c (file_save_dialog_save_image)
	* app/actions/file-commands.c (file_save_cmd_callback)
	* app/widgets/gimpdnd-xds.c (gimp_dnd_xds_save_image): don't pass
	Gimp instance to file_save() calls as it's not needed

2007-09-13  Nils Philippsen  <nphilipp@redhat.com>

	Drop own recently used files code in favour of GtkRecentManager:
	
	* app/core/gimp-gui.[ch] (gimp_recent_list_add_uri)
	* app/gui/gui-vtable.c (gui_recent_list_add_uri): add
	{gimp,gui}_recent_list_add_uri(), gui_recent_list_add_uri()
	dispatches to GtkRecentManager

	* app/dialogs/file-save-dialog.c (file_save_dialog_save_image)
	* app/actions/file-commands.c (file_save_cmd_callback)
	* app/widgets/gimpdnd-xds.c (gimp_dnd_xds_save_image): pass Gimp
	instance to file_save() calls
	
	* app/file/file-open.c (file_open_with_proc_and_display)
	(file_open_layers)
	* app/file/file-save.[ch] (file_save): pass Gimp instance to
	gimp_recent_list_add_uri() calls

	* app/file/gimprecentitem.[ch]
	* app/file/gimprecentlist.[ch]: removed

	* app/file/Makefile.am: drop reference to removed files

2007-09-13  Michael Natterer  <mitch@gimp.org>

	* configure.in: : remove PANGO_DISABLE_DEPRECATED only for
	pango >= 1.19, GIMP builds fine against 1.18

2007-09-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimpviewable.c: removed static variable debug_context
	but keep the warnings about NULL contexts.
